--- a/AspNet4/WebForms/WebForms.csproj
+++ b/AspNet4/WebForms/WebForms.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Content Include="Colors.aspx" />
     <Content Include="Default.aspx" />
+    <Content Include="Events.aspx" />
+    <Content Include="Global.asax" />
     <Content Include="Users.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -91,6 +93,17 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Events.aspx.cs">
+      <DependentUpon>Events.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Events.aspx.designer.cs">
+      <DependentUpon>Events.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Models\EventCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Top.Master.cs">
       <DependentUpon>Top.Master</DependentUpon>
