--- a/AspNetMVC/AspNetMVC/AspNetMVC.csproj
+++ b/AspNetMVC/AspNetMVC/AspNetMVC.csproj
@@ -142,6 +142,9 @@
   <ItemGroup>
     <Content Include="Views\Home\RsvpForm.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\Thanks.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
