--- a/ProJquery/ProJquery/ProJquery.csproj
+++ b/ProJquery/ProJquery/ProJquery.csproj
@@ -136,6 +136,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Scripts\jquery-2.1.0.min.map" />
     <Content Include="Views\Home\Css.cshtml" />
+    <Content Include="Views\Home\Standard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
