--- a/ProJquery/ProJquery/ProJquery.csproj
+++ b/ProJquery/ProJquery/ProJquery.csproj
@@ -119,6 +119,7 @@
     <Content Include="Images\aster.png" />
     <Content Include="Images\border.png" />
     <Content Include="Images\daffodil.png" />
+    <Content Include="Images\lily.png" />
     <Content Include="Images\peony.png" />
     <Content Include="Images\primula.png" />
     <Content Include="Images\rose.png" />
