--- a/ProMvc/SportsStore.WebUI/SportsStore.WebUI.csproj
+++ b/ProMvc/SportsStore.WebUI/SportsStore.WebUI.csproj
@@ -154,9 +154,12 @@
     <Compile Include="Models\ProductsListViewModel.cs" />
     <Compile Include="PagingHelpers\PagingHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\CustomConstraint.cs" />
+    <Compile Include="Utils\RouteUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Admin.css" />
+    <Content Include="Content\StaticContent.html" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
