--- a/ProMvc/SportsStore.WebUI/SportsStore.WebUI.csproj
+++ b/ProMvc/SportsStore.WebUI/SportsStore.WebUI.csproj
@@ -155,6 +155,7 @@
     <Compile Include="PagingHelpers\PagingHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\CustomConstraint.cs" />
+    <Compile Include="Utils\RouteBaseImpl.cs" />
     <Compile Include="Utils\RouteUtils.cs" />
   </ItemGroup>
   <ItemGroup>
