--- a/ProMvc/SportsStore.WebUI/SportsStore.WebUI.csproj
+++ b/ProMvc/SportsStore.WebUI/SportsStore.WebUI.csproj
@@ -150,6 +150,7 @@
     </Compile>
     <Compile Include="Infrastructure\Abstract\IAuthProvider.cs" />
     <Compile Include="Infrastructure\Concrete\FormsAuthProvider.cs" />
+    <Compile Include="Infrastructure\CustomAuthAttribute.cs" />
     <Compile Include="Infrastructure\LegacyRoute.cs" />
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
     <Compile Include="Models\CartIndexViewModel.cs" />
@@ -158,7 +159,10 @@
     <Compile Include="Models\ProductsListViewModel.cs" />
     <Compile Include="PagingHelpers\PagingHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\CustomActionAttribute.cs" />
     <Compile Include="Utils\CustomConstraint.cs" />
+    <Compile Include="Utils\CustomExceptionFilterAttribute.cs" />
+    <Compile Include="Utils\CustomResultFilterAttribute.cs" />
     <Compile Include="Utils\RouteBaseImpl.cs" />
     <Compile Include="Utils\RouteUtils.cs" />
   </ItemGroup>
