--- a/ProMvc/SportsStore.WebUI/SportsStore.WebUI.csproj
+++ b/ProMvc/SportsStore.WebUI/SportsStore.WebUI.csproj
@@ -151,18 +151,25 @@
     <Compile Include="Infrastructure\Abstract\IAuthProvider.cs" />
     <Compile Include="Infrastructure\Concrete\FormsAuthProvider.cs" />
     <Compile Include="Infrastructure\CustomAuthAttribute.cs" />
+    <Compile Include="Infrastructure\CustomControllerFactory.cs" />
+    <Compile Include="Infrastructure\DebugDataView.cs" />
+    <Compile Include="Infrastructure\DebugDataViewEngine.cs" />
     <Compile Include="Infrastructure\LegacyRoute.cs" />
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
     <Compile Include="Models\CartIndexViewModel.cs" />
+    <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Result.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\PagingInfo.cs" />
     <Compile Include="Models\ProductsListViewModel.cs" />
     <Compile Include="PagingHelpers\PagingHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ActionFilterAttribute.cs" />
     <Compile Include="Utils\CustomActionAttribute.cs" />
     <Compile Include="Utils\CustomConstraint.cs" />
     <Compile Include="Utils\CustomExceptionFilterAttribute.cs" />
     <Compile Include="Utils\CustomResultFilterAttribute.cs" />
+    <Compile Include="Utils\HtmlHelperEx.cs" />
     <Compile Include="Utils\RouteBaseImpl.cs" />
     <Compile Include="Utils\RouteUtils.cs" />
   </ItemGroup>
@@ -254,7 +261,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Product\List.cshtml" />
     <Content Include="Views\Shared\ProductSummary.cshtml" />
     <Content Include="Views\Nav\Menu.cshtml" />
@@ -267,6 +273,10 @@
     <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Legacy\GetLegacyURL.cshtml" />
+    <Content Include="Views\Shared\Result.cshtml" />
+    <Content Include="Views\Shared\MyPartial.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\CreatePerson.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
